27 April 2009

* Avoid using the prompt history when the server is locked, and prevent any
  input entered from being added to the client's prompt history.
* New command, confirm-before (alias confirm), which asks for confirmation
  before executing a command. Bound "&" and "x" by default to confirm-before
  "kill-window" and confirm-before "kill-pane", respectively.

23 April 2009

* Support NEL, yet another way of making newline. Fixes the output from some
  Gentoo packaging thing. Reported by someone on SF then logs that allowed a
  fix sent by tcunha.
* Use the xenl terminfo flag to detect early-wrap terminals like the FreeBSD
  console. Many thanks for a very informative email from Christian Weisgerber.

21 April 2009

* tmux 0.8 released.

17 April 2009

* Remove the right number of characters from the buffer when escape then
  a cursor key (or other key prefixed by \033) is pressed. Reported by
  Stuart Henderson.

03 April 2009

* rotate-window command. -U flag (default) for up, -D flag for down.

02 April 2009

* Change scroll/pane redraws to only redraw the single pane affected rather
  than the entire window.
* If redrawing the region would mean redrawing > half the pane, just schedule
  to redraw the entire window. Also add a flag to skip updating the window any
  further if it is scheduled to be redrawn. This has the effect of batching
  multiple redraws together.

01 April 2009

* Basic horizontal splitting and layout management. Still some redraw and other
  issues - particularly, don't mix with manual pane resizing, be careful when
  viewing from multiple clients and don't expect shell windows to redraw very
  well after the layout is changed; generally cycling the layout a few times
  will fix most problems. Getting this in for testing while I think about how
  to deal with manual mode.

  Split window as normal and cycle the layouts with C-b space. Some of the
  layouts will work better when swap-pane comes along.

31 March 2009
